Adding Groovy based processors